# cortex-memory-budget

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  codeql.yml  memory-analysis.yml  release-please.yml  release.yml
docs/: architecture.md  config-schema.md  cortex-variants.md  linker-script-detection.md  memory-analysis.schema.json  memory-model.md  troubleshooting.md  usage.md
examples/cortex-m33/: README.md  firmware.elf  link.ld  main.c  memory-analysis.json
examples/cortex-m7/: README.md  firmware.elf  link.ld  main.c  memory-analysis.json
examples/diff-mode/: README.md  baseline.c  baseline.elf  current.c  current.elf  link.ld  memory-analysis.json
examples/minimal/: README.md  firmware.elf  link.ld  main.c  memory-analysis.json
examples/multi-mode/: README.md  analyses.json  firmware.elf  main.c  release.json  strict.json
src/cortex_memory_budget/: __init__.py  __main__.py  analysis.py  cli_multi.py  cli_single.py  config.py  diff.py  dwarf.py  linker_script.py  models.py  regions.py  reports.py  sections.py  stack_heap.py  symbols.py  tooling.py
tests/integration/: test_e2e.py
tests/unit/: test_cli_single.py  test_config.py  test_diff.py  test_linker_script.py  test_regions.py  test_reports.py  test_sections.py  test_stack_heap.py  test_symbols.py
