[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-memory-budget"
version = "0.1.0"
description = "Static flash/RAM footprint analysis for ARM Cortex-M binaries (M0/M4/M7/M33)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "embedded-pro" }]
keywords = ["arm", "cortex-m", "embedded", "memory", "flash", "ram", "footprint", "ci"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Embedded Systems",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.8",
]

[project.scripts]
cortex-memory-budget = "cortex_memory_budget.cli_single:main"
cortex-memory-budget-multi = "cortex_memory_budget.cli_multi:main"

[project.urls]
Homepage = "https://github.com/embedded-pro/cortex-memory-budget"
Repository = "https://github.com/embedded-pro/cortex-memory-budget"
Issues = "https://github.com/embedded-pro/cortex-memory-budget/issues"
Changelog = "https://github.com/embedded-pro/cortex-memory-budget/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_memory_budget"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "RUF043"]
"src/cortex_memory_budget/reports.py" = ["RUF001"]
"src/cortex_memory_budget/cli_single.py" = ["RUF001"]
"src/cortex_memory_budget/cli_multi.py" = ["RUF001"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/cortex_memory_budget"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
